# ProteinVisualizer

./: CMakeLists.txt  ProteinVisualizer.cpp  README.md
include/: UIElements.h
src/: ProteinVisualizer.cpp  UIElements.cpp
